fixed horizontal scrolling

--- a/src/App.css
+++ b/src/App.css
@@ -3,4 +3,5 @@
     flex-direction: column;
     align-items: center;
     font-family: 'Open Sans';
+    overflow-x: hidden;
 }
